2008-10-17  Douglas Bates <bates@stat.wisc.edu>

	* [r2300] inst/include/Matrix_stubs.c: Consistency with SparseSuite names
	* [r2299] src/AMD/Source/Makefile, src/CHMfactor.c,
	  src/CHOLMOD/Lib/Makefile, src/COLAMD/Source/Makefile, src/Csparse.c,
	  src/Tsparse.c, src/UFconfig/UFconfig.h, src/chm_common.c,
	  src/chm_common.h, src/dense.c, src/dgCMatrix.c, src/dsCMatrix.c,
	  src/init.c, src/t_gCMatrix_colSums.c: Compile only the UF_long version
	  of SparseSuite but setting UF_long to be int

2008-10-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Mutils.h: include <alloca.h> also for AIX

2008-10-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/scripts/ : move *.sh, *.mkf and *.mk files from src/ to src/scripts/

	* src/*/{Lib|Source}/Makefile: change to non-GNU-make style, and
	other improvements from Brian Ripley.

2008-10-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Makevars, src/Makevars.win: replacing
	* src/Makefile, src/Makefile.win which are no longer needed

2008-10-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Makefile, src/*/Makefile: changes from Brian Ripley enabling
	parallel make.

2008-10-13  Douglas Bates <bates@stat.wisc.edu>

	* [r2285] src/SPQR/Include/spqr.hpp: Include the C string declarations.

2008-10-06  Douglas Bates <bates@stat.wisc.edu>

	* [r2284] src/Makefile, src/SPQR/Lib/Makefile_SPQR, src/SPQR/Makefile,
	  src/Win.mk: Modifications for compilation under Windows
	* [r2283] tests/validObj.R: remove reference to undefined object
	* [r2282] inst/doc/UFsparse/SPQR.txt: SPQR license information
	
2008-10-04  Douglas Bates <bates@stat.wisc.edu>

	* [r2281] src/Makefile, src/chm_common.c, src/chm_common.h,
	  src/dgCMatrix.c, src/init.c: SparseSuiteQR interface

2008-10-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Csparse.c (isValid_Csparse): new utility
	* src/chm_common.c (as_cholmod_sparse): add validity check early
	* tests/validObj.R: test the above
	